[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts_tff/nokiafc22.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SelectAnagramCount.gd" type="Script" id=2]
[ext_resource path="res://Icons/tile_bg.png" type="Texture" id=3]
[ext_resource path="res://Icons/select.png" type="Texture" id=4]
[ext_resource path="res://Icons/select_hov.png" type="Texture" id=5]
[ext_resource path="res://Icons/main_menu_hov.png" type="Texture" id=6]
[ext_resource path="res://Icons/main_menu.png" type="Texture" id=7]
[ext_resource path="res://assets/mouse_cursor.png" type="Texture" id=8]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 37, 37 )
margin_left = 2.0
margin_right = 3.0
margin_bottom = 2.0

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.431373, 0.466667, 0.592157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
anti_aliasing = false

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="SelectAnagramCount" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.466667, 0.592157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 270.0
margin_bottom = 60.0
size_flags_horizontal = 7
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 10

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 20.0
margin_right = 260.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.235294, 0.223529, 0.356863, 1 )
custom_fonts/font = SubResource( 1 )
text = "Select Anagram Mode"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 270.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SixLAnag" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_constants/margin_right = 5
custom_constants/margin_top = 30
custom_constants/margin_left = 5
custom_constants/margin_bottom = 30

[node name="ColorRect" type="Panel" parent="VBoxContainer/HBoxContainer/SixLAnag"]
margin_left = 5.0
margin_top = 30.0
margin_right = 129.0
margin_bottom = 354.0
custom_styles/panel = SubResource( 7 )

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/SixLAnag"]
margin_left = 5.0
margin_top = 30.0
margin_right = 129.0
margin_bottom = 354.0
rect_min_size = Vector2( 114, 0 )
size_flags_vertical = 3
alignment = 1

[node name="TypeCont" type="MarginContainer" parent="VBoxContainer/HBoxContainer/SixLAnag/VBox"]
margin_right = 124.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 5
custom_constants/margin_left = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SixLAnag/VBox/TypeCont"]
margin_left = 17.0
margin_top = 104.0
margin_right = 107.0
margin_bottom = 193.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "SIX LETTER ANAGRAM MODE"
align = 1
valign = 1
autowrap = true

[node name="ButtonCont" type="MarginContainer" parent="VBoxContainer/HBoxContainer/SixLAnag/VBox"]
margin_left = 32.0
margin_top = 296.0
margin_right = 91.0
margin_bottom = 324.0
size_flags_horizontal = 6
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="Button6" type="TextureButton" parent="VBoxContainer/HBoxContainer/SixLAnag/VBox/ButtonCont"]
margin_left = 5.0
margin_top = 5.0
margin_right = 54.0
margin_bottom = 18.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
stretch_mode = 3

[node name="SevLAnag" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_right = 270.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_constants/margin_right = 5
custom_constants/margin_top = 30
custom_constants/margin_left = 5
custom_constants/margin_bottom = 30

[node name="ColorRect" type="Panel" parent="VBoxContainer/HBoxContainer/SevLAnag"]
margin_left = 5.0
margin_top = 30.0
margin_right = 129.0
margin_bottom = 354.0
custom_styles/panel = SubResource( 7 )

[node name="VBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/SevLAnag"]
margin_left = 5.0
margin_top = 30.0
margin_right = 129.0
margin_bottom = 354.0
rect_min_size = Vector2( 114, 0 )
size_flags_vertical = 3
alignment = 1

[node name="TypeCont" type="MarginContainer" parent="VBoxContainer/HBoxContainer/SevLAnag/VBox"]
margin_right = 124.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 3
custom_constants/margin_top = 5
custom_constants/margin_left = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/SevLAnag/VBox/TypeCont"]
margin_left = 17.0
margin_top = 104.0
margin_right = 107.0
margin_bottom = 193.0
rect_min_size = Vector2( 90, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 5 )
text = "SEVEN LETTER ANAGRAM MODE"
align = 1
valign = 1
autowrap = true

[node name="ButtonCont" type="MarginContainer" parent="VBoxContainer/HBoxContainer/SevLAnag/VBox"]
margin_left = 32.0
margin_top = 296.0
margin_right = 91.0
margin_bottom = 324.0
size_flags_horizontal = 6
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 10

[node name="Button7" type="TextureButton" parent="VBoxContainer/HBoxContainer/SevLAnag/VBox/ButtonCont"]
margin_left = 5.0
margin_top = 5.0
margin_right = 54.0
margin_bottom = 18.0
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
stretch_mode = 3

[node name="MainMenu" type="MarginContainer" parent="VBoxContainer"]
margin_left = 96.0
margin_top = 452.0
margin_right = 174.0
margin_bottom = 480.0
size_flags_horizontal = 6
custom_constants/margin_top = 5
custom_constants/margin_bottom = 10

[node name="MMenuBtn" type="TextureButton" parent="VBoxContainer/MainMenu"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 18.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 6 )
stretch_mode = 3

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( 82, 218 )
z_index = 300
texture = ExtResource( 8 )
centered = false

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SixLAnag/VBox/ButtonCont/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SevLAnag/VBox/ButtonCont/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu/MMenuBtn" to="." method="_on_MMenuBtn_pressed"]
